2002-07-08  Mike Kestner <mkestner@speakeasy.net>

	* glue/Makefile.in : s/BASE_SOURCES/BASESOURCES
	* parser/gapi_pp.pl : handle nested #if/#endif in ignored #if's
	* parser/makefile : make gtkapi.xml depend on gapi*.pl

2002-07-06  Rachel Hestilow  <hestilow@ximian.com>

	* generator/Parameters.cs (Initialize): Initialize error
	to zero.

2002-07-06  Rachel Hestilow  <hestilow@ximian.com>

	* ObjectGen.cs: Support static string elements. Do
	not generate Ctors or Signals if it is not a GObject.

	* parser/gapi2xml.pl: Add stock defines.

2002-07-05  Rachel Hestilow  <hestilow@ximian.com>

	* glue/Makefile.am: Make this work cleanly, with all automake.

2002-07-05  Rachel Hestilow  <hestilow@ximian.com>

	* configure.in: Conditionally compile Gnome.

	* parser/gapi_pp.pl: Handle line breaks in function declarations.
	* parser/gapi2xml.pl: Handle non-literals in property definitions.

	* glue/program.c: Added.
	* glue/Makefile.am: Add program.c (conditionally compiled).
	Update INCLUDES.
	
	* gnome/Makefile.in: Conditionally compile this.
	* gnome/Program.custom, Modules.cs: Added.

	* samples/Makefile.in: Conditionally compile gnome example.
	* samples/GnomeHelloWorld.cs: Use Gnome.Program.

2002-07-01  Rachel Hestilow  <hestilow@ximian.com>

	* generator/gtkapi.xml:
	* parser/build.pl: Fix to use 3.0 (accidentally reverted in
	last commit).

	* generator/SymbolTable.cs (simple_types): Map gssize and gsize.
	* parser/Gdk.metadata: Tag PixbufLoader.Write's data parameter
	as array.
	
2002-07-01  Rachel Hestilow  <hestilow@ximian.com>

	* generator/gtkapi.xml:
	* parser/build.pl: Qualify gnome lib names; this is needed
	because of debian/LSB policy. 

2002-06-26  Duncan Mak  <duncan@ximian.com>

	* generator/gtkapi.xml:
	* parser/build.pl: Point to 'gtkhtml-3.0' instead of gtkhtml-2.

2002-06-26  Rachel Hestilow  <hestilow@ximian.com>

	* generator/*.cs: Deal with whitespace XmlNodes.

	* parser/build.pl: Dump non-indented file to local directory.
