@@ -9381,7 +9381,7 @@
           <parameter type="GtkPackType*" name="pack_type"/>
         </parameters>
       </method>
-      <method name="PackEndDefaults" cname="gtk_box_pack_end_defaults">
+      <method name="PackEnd" cname="gtk_box_pack_end_defaults">
         <return-type type="void"/>
         <parameters>
           <parameter type="GtkWidget*" name="widget"/>
@@ -9403,7 +9403,7 @@
           <parameter type="GtkPackType" name="pack_type"/>
         </parameters>
       </method>
-      <method name="PackStartDefaults" cname="gtk_box_pack_start_defaults">
+      <method name="PackStart" cname="gtk_box_pack_start_defaults">
         <return-type type="void"/>
         <parameters>
           <parameter type="GtkWidget*" name="widget"/>
@@ -13617,7 +13617,7 @@
           <parameter type="gboolean" name="homogeneous"/>
         </parameters>
       </constructor>
-      <method name="AttachDefaults" cname="gtk_table_attach_defaults">
+      <method name="Attach" cname="gtk_table_attach_defaults">
         <return-type type="void"/>
         <parameters>
           <parameter type="GtkWidget*" name="widget"/>
