@@ -1079,4 +1079,37 @@
     </attribute>
   </data>
 </rule>
+<rule>
+  <class name="GtkBox">
+    <method>PackStartDefaults</method>
+  </class>
+  <data>
+    <attribute target="method">
+      <name>name</name>
+      <value>PackStart</value>
+    </attribute>
+  </data>
+</rule>
+<rule>
+  <class name="GtkBox">
+    <method>PackEndDefaults</method>
+  </class>
+  <data>
+    <attribute target="method">
+      <name>name</name>
+      <value>PackEnd</value>
+    </attribute>
+  </data>
+</rule>
+<rule>
+  <class name="GtkTable">
+    <method>AttachDefaults</method>
+  </class>
+  <data>
+    <attribute target="method">
+      <name>name</name>
+      <value>Attach</value>
+    </attribute>
+  </data>
+</rule>
 </metadata>
