@@ -1,3 +1,9 @@
+2002-07-09  Mike Kestner <mkestner@speakeasy.net>
+
+	* generator/ClassBase.cs : handle overloaded method hash collision
+	* generator/SignalHandler.cs : generate *Handler delegates. stub *Args
+	* parser/Gtk.metadata : add *Defaults method renaming
+
 2002-07-08  Mike Kestner <mkestner@speakeasy.net>
 
 	* glue/Makefile.in : s/BASE_SOURCES/BASESOURCES
